--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,6 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <h1>Hello Serg</h1>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
